--- a/index.html
+++ b/index.html
@@ -13,11 +13,54 @@
 
     <script type="text/babel">
     class App extends React.Component{
+        // state
+        state = {
+name: 'MI',
+age:25
+}
+// DOM
+/*handleClick(e){
+//console.log(e.target);
+console.log(this.state); // result: undefined error
+}*/
+handleClick = (e) =>{
+//console.log(e.target);
+this.setState({
+    name: 'Bilal'
+});
+console.log(this.state); // working success
+}
+handleMouseOver = (e) =>{
+console.log(e.target,e.pageX);
+}
+handleCopy = (e) =>{
+console.log('try been original for once');
+}
+handleChange = (e) =>{
+this.setState({
+    name:e.target.value
+});
+}
+handleSubmit = (e) =>{
+e.preventDefault();
+console.log('form submitted', this.state);
+}
 render(){
     return(
         <div className="app-content">
-        <h2>Hello MI</h2>
+        <h2>Hello {this.state.name} </h2>
+        <span>and</span> 
+        <h3>I am {this.state.age} year old</h3>
         <p>Random number: { Math.random() / 2 }</p>
+        
+        <button onClick={this.handleClick}>Click Me DOM</button>
+        <button onMouseOver={this.handleMouseOver}>Hover Me DOM</button>
+        <p onCopy={this.handleCopy}>What we think we become DOM</p>
+
+        <form onSubmit={this.handleSubmit}>
+            <input type="text" onChange={this.handleChange} />
+            <button>Submit</button>
+        </form>
         </div>
     )
 }
